# mapreduce

./: Cargo.toml  README  build.rs
.github/workflows/: release.yml
proto/: mapreduce.proto
src/: client.rs  coordinator.rs  example.txt  main.rs  mr-out-0  mrsequential.rs  server.rs  test.txt
