[package]
name = "mapreduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mapreduce-server"
path = "src/server.rs"

[[bin]]
name = "mapreduce-client"
path = "src/client.rs"

[[bin]]
name = "mapreduce-sequential"
path = "src/mrsequential.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.27", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
glob = "0.3.0"
itertools = "0.8"
tonic = "0.7"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7"